--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "A federated GraphQL service that is a wrapper around the SpaceX REST API.",
   "main": "index.js",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "repository": {
     "url": "https://github.com/Kartikkumargujarati/xploration-graphql"
   },
   "keywords": [],
   "author": "Kartik Kumar Gujarati",
   "license": "MIT",
-  "homepage": "https://github.com/Kartikkumargujarati/xploration-graphql#readme"
+  "homepage": "https://github.com/Kartikkumargujarati/xploration-graphql#readme",
+  "devDependencies": {
+    "@types/node": "^14.14.41",
+    "typescript": "^4.2.4"
+  }
 }
