--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
+    "lint": "eslint . --ext .ts",
+    "prettify": "prettier 'src/**/*.ts' --write",
     "start:dev": "nodemon",
     "start": "npm run build && node build/index.js"
   },
@@ -17,7 +19,12 @@
   "homepage": "https://github.com/Kartikkumargujarati/xploration-graphql#readme",
   "devDependencies": {
     "@types/node": "^14.14.41",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
