--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettify && npm run lint"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run prettify",
+      "npm run lint"
+    ]
   },
   "repository": {
     "url": "https://github.com/Kartikkumargujarati/xploration-graphql"
@@ -30,6 +36,7 @@
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^4.3.8",
+    "lint-staged": "^10.5.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
