--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "rimraf ./build && tsc",
     "lint": "eslint . --ext .ts",
     "prettify": "prettier 'src/**/*.ts' --write",
-    "start:dev": "nodemon",
-    "start": "npm run build && node build/index.js"
+    "start:dev": "concurrently -k npm:server:*",
+    "server:gateway": "nodemon --exec ts-node src/gateway.ts",
+    "server:company": "nodemon --exec ts-node src/company/index.ts",
+    "start": "npm run build && node build/gateway.js"
   },
   "husky": {
     "hooks": {
@@ -28,6 +30,12 @@
   "author": "Kartik Kumar Gujarati",
   "license": "MIT",
   "homepage": "https://github.com/Kartikkumargujarati/xploration-graphql#readme",
+  "dependencies": {
+    "@apollo/federation": "^0.23.0",
+    "@apollo/gateway": "^0.26.1",
+    "apollo-server": "^2.23.0",
+    "concurrently": "^6.0.2"
+  },
   "devDependencies": {
     "@types/node": "^14.14.41",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
