--- a/src/company-service/package.json
+++ b/src/company-service/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/federation": "^0.23.0",
+    "apollo-datasource-rest": "^0.12.0",
     "apollo-server": "^2.23.0"
   }
 }
