--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prettify": "prettier 'src/**/*.ts' --write",
     "start:dev": "concurrently -k npm:server:*",
     "server:gateway": "nodemon --exec ts-node src/gateway/index.ts",
-    "server:company": "nodemon --exec ts-node src/company-service/index.ts"
+    "server:company": "nodemon --exec ts-node src/company-service/index.ts",
+    "server:roadster": "nodemon --exec ts-node src/roadster-service/index.ts"
   },
   "husky": {
     "hooks": {
@@ -25,6 +26,9 @@
     "url": "https://github.com/Kartikkumargujarati/xploration-graphql"
   },
   "keywords": [
+    "typescript",
+    "apollo",
+    "npm",
     "graphql",
     "federation",
     "apollo-federation",
@@ -32,7 +36,7 @@
   ],
   "author": "Kartik Kumar Gujarati",
   "license": "MIT",
-  "homepage": "https://github.com/Kartikkumargujarati/xploration-graphql#readme",
+  "homepage": "https://github.com/Kartikkumargujarati/xploration-graphql",
   "dependencies": {
     "concurrently": "^6.0.2"
   },
