--- a/src/gateway/package.json
+++ b/src/gateway/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "start:dev": "nodemon --exec ts-node index.ts"
+    "start": "nodemon --exec ts-node index.ts"
   },
   "dependencies": {
     "@apollo/gateway": "^0.26.1",
