--- a/src/roadster-service/package.json
+++ b/src/roadster-service/package.json
@@ -4,12 +4,20 @@
   "description": "Roadster federated service",
   "main": "index.ts",
   "scripts": {
-    "build": "rimraf ./build && tsc",
-    "start:dev": "nodemon --exec ts-node index.ts"
+    "build:dev": "rimraf ./build && tsc",
+    "start:dev": "nodemon --exec ts-node index.ts",
+    "start": "node build/index.js",
+    "postinstall": "tsc"
   },
   "dependencies": {
     "@apollo/federation": "^0.23.0",
     "apollo-datasource-rest": "^0.12.0",
-    "apollo-server": "^2.23.0"
+    "apollo-server": "^2.23.0",
+    "rimraf": "^3.0.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
+  },
+  "engines": {
+    "node": "15.x"
   }
 }
