--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "lint": "eslint . --ext .ts",
     "prettify": "prettier 'src/**/*.ts' --write",
     "start:dev": "concurrently -k npm:server:*",
-    "server:gateway": "nodemon --exec ts-node src/gateway/index.ts",
-    "server:company": "nodemon --exec ts-node src/company-service/index.ts",
-    "server:roadster": "nodemon --exec ts-node src/roadster-service/index.ts"
+    "server:gateway": "nodemon --exec ts-node src/gateway/src/index.ts",
+    "server:company": "nodemon --exec ts-node src/company-service/src/index.ts",
+    "server:roadster": "nodemon --exec ts-node src/roadster-service/src/index.ts"
   },
   "husky": {
     "hooks": {
