--- a/src/launch-service/package.json
+++ b/src/launch-service/package.json
@@ -10,8 +10,13 @@
     "postinstall": "tsc"
   },
   "dependencies": {
+    "@apollo/federation": "^0.23.0",
+    "apollo-server": "^2.23.0",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "engines": {
+    "node": "15.x"
   }
 }
