--- a/src/launch-service/package.json
+++ b/src/launch-service/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/federation": "^0.23.0",
+    "apollo-datasource-rest": "^0.12.0",
     "apollo-server": "^2.23.0",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
