--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "server:gateway": "nodemon --exec ts-node src/gateway/src/index.ts",
     "server:company": "nodemon --exec ts-node src/company-service/src/index.ts",
     "server:launch": "nodemon --exec ts-node src/launch-service/src/index.ts",
-    "server:roadster": "nodemon --exec ts-node src/roadster-service/src/index.ts"
+    "server:roadster": "nodemon --exec ts-node src/roadster-service/src/index.ts",
+    "server:rocket": "nodemon --exec ts-node src/rocket-service/src/index.ts"
   },
   "husky": {
     "hooks": {
