--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     ], /* Specify library files to be included in the compilation. */
     "allowJs": true, /* Allow javascript files to be compiled. */
     "outDir": "build", /* Redirect output structure to the directory. */
-    "rootDir": "src", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "rootDir": ".", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     /* Strict Type-Checking Options */
     "strict": true, /* Enable all strict type-checking options. */
     "noImplicitAny": true, /* Raise error on expressions and declarations with an implied 'any' type. */
