--- a/.github/workflows/deploy-company-service.yml
+++ b/.github/workflows/deploy-company-service.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "company-service/*"
 
 jobs:
   build:
@@ -17,4 +19,4 @@ jobs:
           heroku_app_name: "xploration-company-svc"
           heroku_email: ${{secrets.HEROKU_API_KEY}}
         env:
-          HD_APP_BASE: "src/company-service"
+          HD_APP_BASE: "company-service"
