--- a/.github/workflows/deploy-launch-service.yml
+++ b/.github/workflows/deploy-launch-service.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "launch-service/*"
 
 jobs:
   build:
@@ -17,4 +19,4 @@ jobs:
           heroku_app_name: "xploration-launch-svc"
           heroku_email: ${{secrets.HEROKU_API_KEY}}
         env:
-          HD_APP_BASE: "src/launch-service"
+          HD_APP_BASE: "launch-service"
