--- a/launch-service/package.json
+++ b/launch-service/package.json
@@ -7,6 +7,7 @@
     "build:dev": "rimraf ./build && tsc",
     "start:dev": "nodemon --exec ts-node src/index.ts",
     "start": "node build/index.js",
+    "generatedSchema": "ts-node src/generateLocalSchema.ts",
     "postinstall": "tsc"
   },
   "dependencies": {
