added new step in deploy stop to push schema to Apollo registry

--- a/.github/workflows/deploy-company-service.yml
+++ b/.github/workflows/deploy-company-service.yml
@@ -33,3 +33,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm run generateSchema
+
+      - name: Push Company Schema to Apollo Registry
+        working-directory: ./company-service
+        env:
+          APOLLO_KEY: ${{ secrets.APOLLO_KEY }}
+        run: |
+          npx -p @apollo/rover rover subgraph publish xploration-graphql-ygvmgl \
+            --name=xploration-company-svc \
+            --schema=./schema.graphql \
