--- a/.github/workflows/deploy-company-service.yml
+++ b/.github/workflows/deploy-company-service.yml
@@ -15,6 +15,10 @@ jobs:
       matrix:
         node-version: [15.x]
 
+    defaults:
+      run:
+        working-directory: ./company-service
+
     steps:
       - uses: actions/checkout@v2
 
@@ -29,13 +33,11 @@ jobs:
 
       - name: Generate Local Schema for Company Service
         uses: actions/setup-node@v2
-        working-directory: ./company-service
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm run generateSchema
 
       - name: Push Company Schema to Apollo Registry
-        working-directory: ./company-service
         env:
           APOLLO_KEY: ${{ secrets.APOLLO_KEY }}
         run: |
