--- a/.github/workflows/deploy-company-service.yml
+++ b/.github/workflows/deploy-company-service.yml
@@ -32,10 +32,12 @@ jobs:
         env:
           HD_APP_BASE: "company-service"
 
-      - name: Generate Local Schema for Company Service
+      - name: Setup Node
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+
+      - name: Generate Local Schema for Company Service
         run: |
           npm ci && npm run generateSchema
 
