--- a/.github/workflows/deploy-rocket-service.yml
+++ b/.github/workflows/deploy-rocket-service.yml
@@ -1,6 +1,7 @@
 name: Deploy Rocket Service to Heroku
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -10,9 +11,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [15.x]
+
+    defaults:
+      run:
+        working-directory: ./rocket-service
+
     steps:
       - uses: actions/checkout@v2
-      - name: Release Rocket Service
+
+      - name: Release rocket Service
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -20,3 +31,20 @@ jobs:
           heroku_email: ${{secrets.HEROKU_API_KEY}}
         env:
           HD_APP_BASE: "rocket-service"
+      
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Generate Local Schema for Rocket Service
+        run: |
+          npm ci && npm run generateSchema
+      
+      - name: Push Rocket Service schema to Apollo Registry
+        env:
+          APOLLO_KEY: ${{ secrets.APOLLO_KEY }}
+        run: |
+          npx -p @apollo/rover rover subgraph publish xploration-graphql-ygvmgl \
+            --name=xploration-rocket-svc \
+            --schema=./schema.graphql \
