--- a/.github/workflows/deploy-roadster-service.yml
+++ b/.github/workflows/deploy-roadster-service.yml
@@ -1,4 +1,4 @@
-name: Deploy Roadster Service to Heroku
+name: Deploy Roadster Service
 
 on:
   workflow_dispatch:
@@ -23,7 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Release Roadster Service
+      - name: Deploy Roadster Service to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
