--- a/roadster-service/package.json
+++ b/roadster-service/package.json
@@ -16,7 +16,8 @@
     "apollo-server": "^2.23.0",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "ws": "^6.2.2"
   },
   "engines": {
     "node": "15.x"
