push schema fast the app deployment

--- a/.github/workflows/deploy-company-service.yml
+++ b/.github/workflows/deploy-company-service.yml
@@ -36,6 +36,7 @@ jobs:
   schema_push:
     name: Generate & Schema Push
     runs-on: ubuntu-latest
+    needs: deploy
 
     strategy:
       matrix:
