--- a/.github/workflows/deploy-rocket-service.yml
+++ b/.github/workflows/deploy-rocket-service.yml
@@ -9,7 +9,8 @@ on:
       - "rocket-service/*"
 
 jobs:
-  build:
+  deploy:
+    name: Deploy to Heroku
     runs-on: ubuntu-latest
 
     strategy:
@@ -31,7 +32,23 @@ jobs:
           heroku_email: ${{secrets.HEROKU_API_KEY}}
         env:
           HD_APP_BASE: "rocket-service"
-      
+
+  schema_push:
+    name: Generate & Schema Push
+    runs-on: ubuntu-latest
+    needs: deploy
+
+    strategy:
+      matrix:
+        node-version: [15.x]
+    
+    defaults:
+      run:
+        working-directory: ./rocket-service
+
+    steps:
+      - uses: actions/checkout@v2
+
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
